# WateringSystem

./: .gitattributes  .gitignore  .gitignore-backup  CLAUDE.md  CONTRIBUTING.md  Fix-graph.md  KORREKT_KOMPONENTBYTE.md  LICENSE  README.md  WateringSystem.code-workspace  ervoir pump control and improve system management  platformio.ini
.github/: copilot-instructions.md
.github/workflows/: arduino-legacy-cold.yml  arduino-legacy.yml  firmware-build.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/: index.html  script.js  styles.css  wifi_setup.html
docs/: PRD-esp-idf-migration.md  architecture.md  cleanup-completion-report.md  feature-ideas.md  future-improvements.md  hardware.md  parity-checklist.md  partition-plan.md  release-notes.md  requirements.md  safety.md  testing.md  user-guide.md
docs/api/: openapi.yaml
docs/prd/: PR-01-phase0-foundation.md  PR-02-pump-gpio-board.md  PR-03-bme280-i2c.md  PR-04-modbus-soil-sensor.md  PR-05-level-sensors-ina226.md  PR-06-nvs-littlefs-storage.md  PR-07-wifi-provisioning.md  PR-08-sntp-watchdog-logging.md  PR-09-http-server-api-v1.md  PR-10-frontend-littlefs-assets.md  PR-11-watering-controller-host-tests.md  PR-12-parity-validation.md  PR-13-ota-release.md  PR-14-rev2-bringup.md  README.md
firmware/: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  partitions.csv  sdkconfig.board.rev1_devkit  sdkconfig.board.rev2  sdkconfig.defaults
firmware/components/actuators/: CMakeLists.txt
firmware/components/actuators/include/actuators/: EspTimeProvider.h  GpioWaterPump.h  LockedWaterPump.h  WaterPump.h
firmware/components/actuators/include/actuators/testing/: FakeTimeProvider.h  MockWaterPump.h
firmware/components/actuators/src/: GpioWaterPump.cpp  WaterPump.cpp
firmware/components/api/: CMakeLists.txt  idf_component.yml
firmware/components/api/include/api/: ApiDtos.h  ApiEnvelope.h  ApiRequests.h  ApiRoutes.h  ApiSerialize.h  ApiServer.h  ApiStatic.h
firmware/components/api/src/: ApiEnvelope.cpp  ApiRequests.cpp  ApiRoutes.cpp  ApiSerialize.cpp  ApiServer.cpp  ApiStatic.cpp
firmware/components/control/: CMakeLists.txt
firmware/components/control/include/control/: .gitkeep  ReservoirController.h  WateringController.h
firmware/components/control/src/: ReservoirController.cpp  WateringController.cpp
firmware/components/events/: CMakeLists.txt
firmware/components/events/include/events/: EventLogger.h
firmware/components/events/src/: EventLogger.cpp
firmware/components/network/: CMakeLists.txt
firmware/components/network/include/network/: EspWifiDriver.h  LockedWifiManager.h  ProvisioningPortal.h  WifiBootMode.h  WifiCredentialValidation.h  WifiManager.h  WifiState.h
firmware/components/network/include/network/testing/: MockWifiDriver.h
firmware/components/network/src/: EspWifiDriver.cpp  ProvisioningPortal.cpp  WifiManager.cpp
firmware/components/sensors/: CMakeLists.txt  idf_component.yml
firmware/components/sensors/include/sensors/: Bme280Sensor.h  DebouncedLevelSensor.h  EspI2cBus.h  EspModbusClient.h  GpioLevelSensor.h  Ina226Sensor.h  LockedEnvironmentalSensor.h  LockedLevelSensor.h  LockedModbusClient.h  LockedPowerSensor.h  LockedSoilSensor.h  ModbusSoilSensor.h  SensorTaskLogPolicy.h
firmware/components/sensors/include/sensors/testing/: MockEnvironmentalSensor.h  MockI2cBus.h  MockLevelSensor.h  MockModbusClient.h  MockSoilSensor.h
firmware/components/sensors/src/: Bme280Sensor.cpp  DebouncedLevelSensor.cpp  EspI2cBus.cpp  EspModbusClient.cpp  GpioLevelSensor.cpp  Ina226Sensor.cpp  ModbusSoilSensor.cpp
firmware/components/storage/: CMakeLists.txt
firmware/components/storage/include/storage/: LittleFsDataStorage.h  LockedConfigStore.h  LockedDataStorage.h  NvsConfigStore.h  StorageMount.h
firmware/components/storage/include/storage/testing/: MockConfigStore.h  MockDataStorage.h
firmware/components/storage/src/: LittleFsDataStorage.cpp  NvsConfigStore.cpp  StorageMount.cpp
firmware/components/time/: CMakeLists.txt
firmware/components/time/include/time/: SntpClient.h  SyncStatus.h  SystemWallClock.h  TimeService.h
firmware/components/time/include/time/testing/: FakeWallClock.h
firmware/components/time/src/: SntpClient.cpp  SystemWallClock.cpp  TimeService.cpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  diag_console.cpp  diag_console.h  idf_component.yml  sensor_task.cpp  sensor_task.h  system_observer.cpp  system_observer.h  task_watchdog.cpp  task_watchdog.h  watering_task.cpp  watering_task.h  wifi_task.cpp  wifi_task.h
firmware/storage_image/: README
firmware/test_apps/host/main/: CMakeLists.txt  test_api_requests.cpp  test_api_routes.cpp  test_api_serialize.cpp  test_api_static.cpp  test_bme280.cpp  test_board_contract_rev1.cpp  test_board_contract_rev2.cpp  test_config_store.cpp  test_data_storage.cpp  test_event_logger.cpp  test_ina226.cpp  test_level_sensor.cpp  test_main.cpp  test_reservoir.cpp  test_soil_sensor.cpp  test_time.cpp  test_water_pump.cpp  test_watering_controller.cpp  test_wifi.cpp
firmware/tools/: gzip_assets.py
firmware/web/: README.md  index.html  script.js
hardware/: WateringSystem.kicad_pcb  WateringSystem.kicad_prl  WateringSystem.kicad_pro  WateringSystem.kicad_sch  fabrication-toolkit-options.json  sym-lib-table
hardware/bom/: WateringSystem-BOM.html  WateringSystem-rev2-BOM-LCSC.csv  WateringSystem-rev2-BOM-LCSC.md  WateringSystem-rev2-BOM.csv  WateringSystem-rev2-BOM.md  ibom.html
hardware/jlcpcb/: project.db
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
include/: WateringController.h
include/actuators/: IActuator.h  IWaterPump.h  WaterPump.h
include/communication/: IModbusClient.h  SP3485ModbusClient.h  WateringSystemWebServer.h  (+1 more)
src/: WateringController.cpp  main.cpp
test/: README.md  test_level_shifter.cpp  test_rs485_communication.cpp  test_rs485_debug.cpp  test_rs485_enhanced.cpp
(+130 files in other folders)
